deploy/hyuki-app-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyuki-app-dev
  namespace: hyuki-namespace
  labels:
    app: hyuki-app-dev
spec:
  selector:
    matchLabels:
      app: hyuki-app-dev
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: hyuki-app-dev
    spec:
      containers:
        - name: hyuki-dev
          image: kderr2791/hyuki-app:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
              memory: 0.5Gi
            requests:
              cpu: "1"
              memory: 0.25Gi
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health_check.html
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health_check.html
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 5
          lifecycle:
            preStop:
              exec:
                command: [ "/bin/sleep","2" ]
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
        - name: regcred
