deploy/hyuki-svc-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: hyuki-app-svc-dev
  namespace: hyuki-namespace
spec:
  ports:
    - name: service
      port: 80
      targetPort: 8080
  selector:
    app: hyuki-app-dev
